--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   flutter_screenutil: ^5.0.1
   get: ^4.5.1
   dio: ^4.0.4
-  flutter_svg: ^1.0.0
+  flutter_svg: ^0.23.0+1
+  flutter_svg_provider: ^0.1.11
 
 dev_dependencies:
   flutter_test:
