--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   flutter_screenutil: ^5.0.1
   get: ^4.5.1
   dio: ^4.0.4
-  flutter_svg: ^0.23.0+1
-  flutter_svg_provider: ^0.1.11
+  flutter_svg:
+  flutter_svg_provider:
 
 dev_dependencies:
   flutter_test:
@@ -77,17 +77,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Janna
+      fonts:
+        - asset: font/alfont_com_Janna-LT-Regular.ttf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
