--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   dotted_decoration: ^2.0.0
   flutter_slidable: ^1.1.0
   image_picker: ^0.8.4+4
+  fluttertoast: ^8.0.8
+
 
 
 dev_dependencies:
@@ -59,7 +61,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+# following view: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
