--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,8 @@ dependencies:
   dotted_decoration: ^2.0.0
   flutter_slidable: ^1.1.0
   image_picker: ^0.8.4+4
-  #carousel_slider: ^4.0.0
   flutter_carousel_widget: ^0.1.0
+  modal_bottom_sheet: ^2.0.0
 
 dev_dependencies:
   flutter_test:
