--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   dotted_decoration: ^2.0.0
   flutter_slidable: ^1.1.0
   image_picker: ^0.8.4+4
-
+  fluttertoast: ^8.0.8
+  step_progress_indicator: ^1.0.2
 
 dev_dependencies:
   flutter_test:
