--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   step_progress_indicator: ^1.0.2
   flutter_carousel_widget: ^0.1.0
   modal_bottom_sheet: ^2.0.0
+  json_annotation: ^4.4.0
+  retrofit: ^3.0.1
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  retrofit_generator: ^3.0.1+1
+  build_runner: ^2.1.7
+  json_serializable: ^6.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
