--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,9 @@ dependencies:
   step_progress_indicator: ^1.0.2
   flutter_carousel_widget: ^0.1.0
   modal_bottom_sheet: ^2.0.0
-
+  get_storage: ^2.0.3
+  firebase_auth:
+  firebase_core :
 dev_dependencies:
   flutter_test:
     sdk: flutter
