--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   json_annotation: ^4.4.0
   retrofit: ^3.0.1
   logger: ^1.1.0
-
+  flutter_easyloading: ^3.0.3
   get_storage: ^2.0.3
   firebase_auth:
   firebase_core :
