--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,12 @@ dependencies:
   get_storage: ^2.0.3
   firebase_auth:
   firebase_core :
+  flutter_spinkit: ^5.1.0
+  path_provider: ^2.0.8
+  permission_handler: ^8.3.0
+  percent_indicator: ^3.4.0
+  open_file: ^3.2.1
+  device_info: ^2.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
