--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   get_storage: ^2.0.3
   firebase_auth:
   firebase_core :
+  firebase_messaging:
 dev_dependencies:
   flutter_test:
     sdk: flutter
