--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/
+   - assets/region_codes.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
