--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_cupertino_localizations:
+  flutter_localizations:
+    sdk: flutter
   intl: ^0.17.0
   country_code_picker: ^2.0.2
+#  date_range_picker:
   phone_number: ^0.12.0+1
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.0.1
