--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   firebase_messaging:
   cached_network_image: ^3.2.0
   google_maps_flutter: ^2.1.1
+  url_launcher: ^6.0.18
 dev_dependencies:
   flutter_test:
     sdk: flutter
