--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   google_maps_flutter: ^2.1.1
   url_launcher: ^6.0.18
   quds_popup_menu: ^0.0.1+1
+  video_player:
 dev_dependencies:
   flutter_test:
     sdk: flutter
