--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,9 @@ dependencies:
   location: ^4.3.0
 
   pull_to_refresh: ^2.0.0
+  flutter_image_compress: ^1.1.0
+  infinite_scroll_pagination: ^3.1.0
+  video_compress: ^3.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
