--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   pin_code_fields: ^7.3.0
   group_radio_button: ^1.1.0
   dropdown_search: ^2.0.1
-  awesome_select: ^5.1.0
+#  awesome_select: ^5.1.0
   dotted_decoration: ^2.0.0
   flutter_slidable: ^1.1.0
 #  image_picker: ^0.8.4+4
