add show requests client

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,9 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 31
-
+    lintOptions {
+        abortOnError false
+    }
 //    compileSdkVersion flutter.compileSdkVersion
 
     compileOptions {
@@ -48,9 +50,9 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.diwan.advertisers"
 //        minSdkVersion  20  //flutter.minSdkVersion
-//        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion flutter.targetSdkVersion
         minSdkVersion 21
-        targetSdkVersion 31
+       // targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
