--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,13 @@ buildscript {
     }
 }
 
+//gradle.projectsEvaluated {
+//    tasks.withType(JavaCompile){
+//        options.compilerArgs << "-Xlint:deprecation"
+//    }
+//}
+
+
 allprojects {
     repositories {
         google()
