--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
   flutter_image_compress: ^1.1.0
   infinite_scroll_pagination: ^3.1.0
   video_compress: ^3.1.0
+  connectivity_plus: ^2.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
