--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_svg: ^0.23.0+1
   flutter_svg_provider: ^0.1.11
   pin_code_fields: ^7.3.0
-  group_radio_button: ^1.1.0
+  group_radio_button: ^1.2.0
   dropdown_search: ^2.0.1
 #  awesome_select: ^5.1.0
   dotted_decoration: ^2.0.0
@@ -87,6 +87,7 @@ dependencies:
   infinite_scroll_pagination: ^3.1.0
   video_compress: ^3.1.0
   connectivity_plus: ^2.2.1
+  rflutter_alert: ^2.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
