--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,7 +121,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/
-   - images/icon-msg1.png
+   - images/chat img3.png
    - assets/region_codes.json
   #   - images/a_dot_ham.jpeg
 
