--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   rflutter_alert: ^2.0.4
   share_plus: ^4.0.2
   readmore: ^2.1.0
+  flutter_rating_bar: ^4.0.0
 
 
   #focused_menu: ^1.0.5
