--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -33,7 +33,11 @@
     <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
     <string>$(PRODUCT_NAME) location use</string>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+    <string>We need to access to the microphone to record audio file</string>
 	<key>UILaunchStoryboardName</key>
+	<key>NSContactsUsageDescription</key>
+         <string>Reason we need access to the contact list</string>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
