--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,7 @@ dependencies:
   url_launcher: ^6.0.17
   flutter_phone_direct_caller: ^2.1.0
   quds_popup_menu: ^0.0.1+1
-  video_player: ^2.3.0
+  video_player:
   file_picker: ^4.3.3
   location: ^4.3.0
   cool_alert: ^1.1.0
@@ -90,9 +90,12 @@ dependencies:
   rflutter_alert: ^2.0.4
   share_plus: ^4.0.2
   readmore: ^2.1.0
-  audioplayers: ^0.20.1
-  flutter_rating_bar: ^4.0.0
-
+  pusher_client: ^2.0.0
+  social_media_recorder: ^0.1.61
+  just_audio: ^0.9.20
+  flutter_contacts: ^1.1.3
+  map_picker: ^0.0.3
+  geocoding: ^2.0.4
   #focused_menu: ^1.0.5
 dev_dependencies:
   flutter_test:
@@ -122,7 +125,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/
-   - images/like comemnt.png
+   - images/icon-msg1.png
    - assets/region_codes.json
   #   - images/a_dot_ham.jpeg
 
