--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,8 @@ dependencies:
   flutter_contacts: ^1.1.3
   map_picker: ^0.0.3
   geocoding: ^2.0.4
+  custom_pop_up_menu: ^1.2.3+1
+  clipboard: ^0.1.3
   #focused_menu: ^1.0.5
 dev_dependencies:
   flutter_test:
