--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
     </queries>
 
     <application
+        android:usesCleartextTraffic="true"
         android:label="advertisers"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
