--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,9 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'https://google.bintray.com/exoplayer/'
+        }
     }
 }
 
