--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.2.0
   get: ^4.5.1
-  dio: ^4.0.4
+  #dio: ^4.0.4
+  dio: ^4.0.6
   flutter_svg: ^0.23.0+1
   flutter_svg_provider: ^0.1.11
   pin_code_fields: ^7.3.0
@@ -98,6 +99,13 @@ dependencies:
   geocoding: ^2.0.4
   custom_pop_up_menu: ^1.2.3+1
   clipboard: ^0.1.3
+  record_mp3: ^3.0.0
+  scrollable_positioned_list: ^0.2.3
+  flutter_downloader: ^1.7.3
+  lecle_downloads_path_provider: ^0.0.2+6
+  #audioplayers: ^0.20.1
+#  record: ^3.0.4
+#  flutter_sound_record: ^3.1.0
   #focused_menu: ^1.0.5
 dev_dependencies:
   flutter_test:
