--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
+  sdk: ">=2.16.2 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -103,7 +103,8 @@ dependencies:
   scrollable_positioned_list: ^0.2.3
   flutter_downloader: ^1.7.3
   lecle_downloads_path_provider: ^0.0.2+6
-  #audioplayers: ^0.20.1
+  audioplayers: ^0.20.1
+  flutter_rating_bar: ^4.0.0
 #  record: ^3.0.4
 #  flutter_sound_record: ^3.1.0
   #focused_menu: ^1.0.5
