--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,6 +11,7 @@
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
 	<string>Advertisers</string>
+	<key>io.flutter.embedded_views_preview</key><true/>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
