--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 <!--    <uses-permission android:name="android.permission.CALL_PHONE" />-->
     <queries>
         <!-- If your app opens https URLs -->
