--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,7 +102,7 @@ dependencies:
   record_mp3: ^3.0.0
   scrollable_positioned_list: ^0.2.3
   flutter_downloader: ^1.7.3
- # lecle_downloads_path_provider: ^0.0.2+6
+  lecle_downloads_path_provider: ^0.0.2+6
   audioplayers: ^0.20.1
   flutter_rating_bar: ^4.0.0
 #  record: ^3.0.4
