--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,7 @@ dependencies:
   firebase_dynamic_links: ^4.2.1
   flutter_file_view: ^2.0.5
   vimeoplayer_trinity: ^0.2.1+1
+  flutter_background_service: ^2.0.0
 #  record: ^3.0.4
 #  flutter_sound_record: ^3.1.0
   #focused_menu: ^1.0.5
