--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ dependencies:
   device_info: ^2.0.3
   shimmer: ^2.0.0
   firebase_messaging:
-  flutter_local_notifications:
+  flutter_local_notifications: ^9.3.2
   overlay_support:
   cached_network_image: ^3.2.0
   google_maps_flutter: ^2.1.1
