--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   phone_number: ^0.12.0+1
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.2.0
-  get: ^4.5.1
+  get: ^4.6.3
   #dio: ^4.0.4
   dio: ^4.0.6
   flutter_svg: ^0.23.0+1
@@ -110,12 +110,15 @@ dependencies:
   firebase_dynamic_links: ^4.2.1
   flutter_file_view: ^2.0.5
   vimeoplayer_trinity: ^0.2.1+1
+
 #  record: ^3.0.4
 #  flutter_sound_record: ^3.1.0
   #focused_menu: ^1.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  analyzer: ^3.0.0
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -123,7 +126,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-  retrofit_generator: ^3.0.1+1
+  retrofit_generator: ^4.0.1
   build_runner: ^2.1.7
   json_serializable: ^6.1.3
 
